# polidoro-config

./: .deepsource.toml  .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.test.txt  requirements.txt  sonar-project.properties
.github/workflows/: code_quality.yml  later_python_versions.yml
.run/: Build Docs.run.xml
docs/: conf.py  index.md  index.rst  requirements.txt
docs/_templates/: module.rst
docs/apidocs/: index.rst
docs/apidocs/pconfig/: pconfig.config.md  pconfig.md
docs/classes/: configbase.md  dotenv_loader.rst  envvar_loader.rst  index.md  loaders.rst  yaml_loader.rst
docs/classes/loaders/: envvar_loader.md  index.md
pconfig/: __init__.py  config.py  config_value.py  error.py
pconfig/loaders/: __init__.py  dotenv_loader.py  envvar_loader.py  file_loader.py  loader.py  yaml_loader.py
tests/: conftest.py  test_config.py
tests/loaders/: test_dotenv_loader.py  test_envvar_loader.py  test_file_loader.py  test_loader.py  test_pydantic.py  test_yaml_loader.py
