[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polidoro-config"
authors = [
    { name="Heitor Luis Polidoro" },
]
description = "Package to manage configuration for you project."
readme = "README.md"
requires-python = ">=3.10"
keywords = []
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.10+",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/heitorpolidoro/polidoro-config"

[tool.setuptools.dynamic]
version = {attr = ".__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.coverage.run]
source = ["."]
omit = ["tests/*"]
relative_files = true

[tool.black]
max_line_length = 120
